--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -6,5 +6,5 @@
     <span></span>
     <span></span>
   </div>
-  <p>Just a moment... we're gathering the best content for you!</p>
+  <p>Just a moment... we're gathering the best suited programs that fulfils your requirements!</p>
 </div>
